<resources>
    <string name="app_name">MeetRoom</string>
    <string name="personal_info">个人信息</string>
    <string name="password">密码</string>
    <string name="forgot_pwd">忘记密码</string>
    <string name="new_user_register">新用户注册</string>
    <string name="login">登录</string>
    <string name="phone_number">手机号</string>
    <string name="meeting_name">会议名称</string>
    <string name="remark">备注</string>
    <string name="meet_start_time">开始时间</string>
    <string name="meet_end_time">结束时间</string>
    <string name="apply_meet">申请会议</string>
    <string name="choose_member">选择成员</string>
    <string name="my_msg">我的消息</string>
    <string name="msg_detail">消息详情</string>
</resources>
