<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.ApplyMeetingRoomActivity">

    <android.support.v7.widget.CardView
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        app:cardBackgroundColor="@color/colorPrimary">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/apply_meet"
            android:textColor="@android:color/white"
            android:textSize="18sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right|center_vertical"
            android:layout_marginRight="16dp"
            app:srcCompat="@drawable/ic_check_white_24dp" />

        <View
            android:id="@+id/btn_apply"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:layout_gravity="right|center_vertical"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true" />
    </android.support.v7.widget.CardView>

    <ScrollView
        android:id="@+id/scroll_apply"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toStartOf="@+id/toolbar"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/meeting_name_apply_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/meeting_name"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/toolbar" />

            <EditText
                android:id="@+id/meeting_remark_apply_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/remark" />

            <TextView
                android:id="@+id/meeting_time_apply_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"

                android:textSize="18sp"
                android:paddingLeft="4dp"
                android:hint="@string/meet_start_time"
                android:inputType="datetime"

                />

            <TextView
                android:layout_marginTop="12dp"
                android:id="@+id/meeting_end_time_apply_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:paddingLeft="4dp"
                android:hint="@string/meet_end_time"
                />
            <com.nex3z.flowlayout.FlowLayout
                android:layout_marginTop="8dp"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:paddingBottom="8dp"
                android:id="@+id/flow_apply"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            </com.nex3z.flowlayout.FlowLayout>
        </LinearLayout>
    </ScrollView>


    <Button
        android:id="@+id/choose_member_apply_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:text="@string/choose_member"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</android.support.constraint.ConstraintLayout>